[CO-04] Add create comment service, break input into new component, fix global styling

--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -117,57 +117,6 @@
 
         &__status {
           @include dynamic-flex(center, center, row, 1.25rem);
-
-          .profile {
-            &__image {
-              object-fit: cover
-            }
-
-            &__input {
-              border-bottom: 1px solid $gray-2;
-
-              &--focused {
-                border-bottom: 1px solid $primary;
-
-                button.btn {
-                  svg {
-                    color: $primary;
-                  }
-                }
-              }
-
-              button, input {
-                border-radius: 0;
-              }
-
-              input {
-                padding: .875rem 0;
-                border: none;
-                background-color: $gray-1;
-              }
-
-              .form-control:focus {
-                box-shadow: 0px 1px 0px 0px $primary;
-              }
-
-              .btn {
-                background-color: transparent;
-
-                &:hover {
-                  border-color: $gray-1;
-
-                  svg {
-                    color: $primary;
-                  }
-                }
-
-                svg {
-                  color: $gray-3;
-                  font-size: 1.1875rem
-                }
-              }
-            }
-          }
         }
 
         &__record {
@@ -295,8 +244,11 @@
 
   &__actions {
     @include dynamic-flex(center, flex-start, row, 1rem);
-
     margin-top: .75rem;
+
+    &--comment {
+      margin-top: 1rem;
+    }
 
     button.btn {
       @include dynamic-flex(center, center, row);
@@ -402,5 +354,59 @@
 button.btn {
   svg {
     margin-right: .75rem;
+  }
+}
+
+
+.profile {
+  &__image {
+    object-fit: cover
+  }
+
+  &__input {
+    border-bottom: 1px solid $gray-2;
+
+    &--focused {
+      border-bottom: 1px solid $primary;
+
+      button.btn {
+        svg {
+          color: $primary;
+        }
+      }
+    }
+
+    button, input {
+      border-radius: 0;
+    }
+
+    input {
+      padding: .875rem 0;
+      border: none;
+      background-color: transparent;
+    }
+
+    .form-control:focus {
+      box-shadow: 0px 1px 0px 0px $primary;
+      background: transparent;
+    }
+
+    .btn {
+      background-color: transparent;
+      border: none;
+
+      &:hover {
+        border-color: $gray-1;
+
+        svg {
+          color: $primary;
+        }
+      }
+
+      svg {
+        color: $gray-3;
+        font-size: 1.1875rem
+      }
+    }
   }
 }
